# visju_app

./: .gitignore  CLAUDE.md  LICENSE  README.md  TASK.md  WORKFLOW.md  pyproject.toml
.claude/: settings.json
backend/: main.py  test_conversion_simple.py  vidarshov.db
backend/app/api/: conversion_router.py  router.py  sessions_router.py  sync_router.py  transcription_router.py
backend/app/core/: config.py  database.py  init_db.py  logging.py
backend/app/models/: base.py  db_models.py
backend/app/services/: audio_conversion_service.py  audio_file_service.py  database_service.py  file_monitor_service.py  file_storage_service.py  file_sync_service.py  google_drive_service.py  transcription_service.py
backend/scripts/: test_nb_whisper_small.py  test_transcription_api.py  test_transcription_service.py  test_transcription_v2.py
backend/test/: conftest.py  test_audio_conversion.py  test_database.py  test_drive_auth.py  test_file_sync.py  test_google_drive_auth.py  test_google_drive_integration.py
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: base.html  index.html  session_detail.html  sessions.html
